tests/ui/postgres/gated/uuid.stderr
error: support for column type uuid (type OID 2950) at position 0 (name: Some("uuid")) requires optional feature `uuid`
 --> $DIR/uuid.rs:2:13
  |
2 |     let _ = sqlx::query!("select 'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11'::uuid");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
